# movix-qc-sdk

./: .gitignore  README.md  overview.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  main.py  requirements.txt
examples/nodejs/: .gitignore  README.md  index.mjs  package.json
examples/python/: .gitignore  README.md  main.py  requirements.txt
src/movix_qc_sdk/: __init__.py  auth.py  cases.py  client.py  config.py  errors.py  models.py  tasks.py  transport.py
tests/: test_auth.py  test_clients.py  test_config.py  test_status.py  test_summary_and_viewer.py  test_tasks.py  test_transport.py  test_wait.py
tests/fixtures/: lower_contact.drc  upper_contact.drc
