[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movix-qc-sdk"
version = "0.3.0"
description = "Python SDK for the Movix QC API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Movix", email = "support@movixtech.com"}]
keywords = ["movix", "qc", "sdk", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "httpx>=0.27.0",
  "dracopy>=1.6.0",
  "numpy>=1.26.0",
  "pydantic>=2.5.0",
  "trimesh>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "respx>=0.21",
  "flake8>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
